src/objects/TS_NoReplyAddress__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Belgium__c</fullName>
        <label>Belgium</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Denmark__c</fullName>
        <label>Denmark</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>France__c</fullName>
        <label>France</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Germany__c</fullName>
        <label>Germany</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Great_Britain__c</fullName>
        <label>Great Britain</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ireland__c</fullName>
        <label>Ireland</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Netherlands__c</fullName>
        <label>Netherlands</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Norway__c</fullName>
        <label>Norway</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Spain__c</fullName>
        <label>Spain</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sweden__c</fullName>
        <label>Sweden</label>
        <type>Email</type>
    </fields>
    <label>TS NoReplyAddress</label>
</CustomObject>